Fix variable prompt divider lines being unreadable in dark mode

--- a/src/components/prompt/prompt.css
+++ b/src/components/prompt/prompt.css
@@ -94,6 +94,9 @@
     width: 100%;
     margin: 0 auto;
 }
+[theme="dark"] .cloud-option {
+    border-color: rgba(255, 255, 255, .25);
+}
 
 .cloud-option-text {
     opacity: .5;
